feat(plugins): Consolidate typescript config (partially).  Do not strip comments. (#8180)
This should fix official releases of Deck not supporting plugins (due to the magic "webpackIgnore" comment getting stripped)

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,7 +51,7 @@
       "huaweicloud": ["huaweicloud/src"]
     },
     "pretty": true,
-    "removeComments": true,
+    "removeComments": false,
     "rootDir": ".",
     "skipLibCheck": true,
     "sourceMap": true,
